--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         <header class = "header bg-bright" id = "header">
             <div class = "container">
                 <div class = "header-content text-center">
-                    <h1 class = "text-uppercase text-blue-dark fs-14 fw-6 ls-1 lg-title">online resume builder</h1>
+                    <h1 class = "text-uppercase text-blue-dark fs-14 fw-6 ls-1 lg-title">THINKBOA Online Resume Builder</h1>
                     <h1 class = "lg-title">Only 2% of resumes make it pas the first round. Be in the top 2%</h1>
                     <p class = "text-dark fs-18">Use professional field-tested resume templates that follow that exact 'resume rules' employers look for. Easy to use and done within minutes - try now for free!</p>
                     <a href = "resume.html" class = "btn btn-primary text-uppercase">create my resume</a>
